# expression_parser

./: CMakeLists.txt  config.json
include/misc/: utils.hpp
include/model/: automation.hpp  container.hpp  data_context.hpp  expr_affectation.hpp  expr_functions.hpp  expr_logical.hpp  expr_mathematical.hpp  expression.hpp  parser.hpp  responsabilities.hpp  validation_handler.hpp
ressources/: exemple_config.json
src/: main.cpp
src/misc/: CMakeLists.txt  utils.cpp
src/model/: CMakeLists.txt  data_context.cpp  expr_affectation.cpp  expr_functions.cpp  expr_logical.cpp  expr_mathematical.cpp  expression.cpp  parser.cpp  responsabilities.cpp  validation_handler.cpp
tests/: CMakeLists.txt
tests/model/: addition.test.cpp  affectation.test.cpp  andor.test.cpp  bitwise_logical.test.cpp  combined.test.cpp  container.test.cpp  division.test.cpp  equals.test.cpp  exp.test.cpp  functions.test.cpp  greaterthan.test.cpp  invalid.test.cpp  lessthan.test.cpp  modulo.test.cpp  multiplication.test.cpp  notoperator.test.cpp  parenthesis.test.cpp  reference.test.cpp  shift.test.cpp  substraction.test.cpp
